--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "paperless-main/build",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
